<resources>
    <string name="app_name">dashboard_capstone</string>
    <string name="candidates">Candidate</string>
    <string name="recruiter">Recruiter</string>
    <string name="candidatepage">Ini page Candidate</string>
    <string name="recruiterpage">Ini page Recruiter</string>
    <string name="judul">What’s your positions?</string>
    <string name="InterviewIN">InterviewIN</string>
    <string name="allIN">All Interviews</string>
    <string name="nodata">You havent done any interviews yet</string>
</resources>