<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"

        />

    <Button
        android:id="@+id/btn_candidate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/candidates"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/blue"
      />

    <Button
        android:id="@+id/btn_recruiter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/recruiter"
        android:backgroundTint="@color/blue"


        />




</LinearLayout>